--- a/Lemonaid_1_13_2/src/main/resources/plugin.yml
+++ b/Lemonaid_1_13_2/src/main/resources/plugin.yml
@@ -267,6 +267,7 @@ permissions:
       lemonaid.clearchat: true
       lemonaid.socialspy: true
       lemonaid.teleport.admin: true
+      lemonaid.homes.unlimited: true
   lemonaid.duty:
     description: Allow duty mode for moderators; manage child-permissions in the config
     default: op
